--- a/block-BNaabs/new.html
+++ b/block-BNaabs/new.html
@@ -6,5 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <form action="/new" method="POST">
+      <input type="text" name="username" placeholder="Add username" />
+      <input type="text" name="email" placeholder="Add email" />
+      <input type="submit" value="Add user" />
+    </form>
+  </body>
 </html>
